@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -10,16 +10,38 @@
         <groupId>cz.cas.lib.proarc</groupId>
         <artifactId>proarc</artifactId>
         <version>1.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>proarc-desa</artifactId>
+    <packaging>jar</packaging>
 
-    <name>ProArc DESA Support</name>
+    <name>ProArc DESA Client</name>
 
     <properties>
+        <!-- local junit properties -->
+        <proarc-desa.junit.properties.file>${project.basedir}/src/test/resources/junit.properties</proarc-desa.junit.properties.file>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.sun.xml.ws</groupId>
+            <artifactId>jaxws-rt</artifactId>
+            <version>2.2.6-2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>${jerseyVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.3</version>
+        </dependency>
 
         <!-- tests -->
         <dependency>
@@ -33,52 +55,81 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.jvnet.jaxb2.maven2</groupId>
+                <artifactId>maven-jaxb2-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>desa-generate</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <schemaDirectory>src/main/resources/cz/cas/lib/proarc/desa/xml</schemaDirectory>
+                            <schemaIncludes>
+                                <include>pspsip.xsd</include>
+                            </schemaIncludes>
+                            <generatePackage>cz.cas.lib.proarc.desa.pspsip</generatePackage>
+                            <generateDirectory>${project.build.directory}/generated-sources/xjc</generateDirectory>
+                        </configuration>
+                    </execution>
+                     <execution>
+                        <id>nomen-generate</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <schemaDirectory>src/main/resources/cz/cas/lib/proarc/desa/xml</schemaDirectory>
+                            <schemaIncludes>
+                                <include>nomen-import.xsd</include>
+                            </schemaIncludes>
+                            <generatePackage>cz.cas.lib.proarc.desa.nomenclature</generatePackage>
+                            <generateDirectory>${project.build.directory}/generated-sources/xjcNomen</generateDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
 
-            <!--Creates sources.jar to allow to inherit included GWT modules-->
-<!--            <plugin>
+            <!--JAX-WS 2.2 JDK 1.6 support-->
+            <!--soapclient-->
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>-->
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
 
-<!--            <plugin>
-                <groupId>org.jvnet.jaxb2.maven2</groupId>
-                <artifactId>maven-jaxb2-plugin</artifactId>
+            <plugin>
+                <groupId>org.jvnet.jax-ws-commons</groupId>
+                <artifactId>jaxws-maven-plugin</artifactId>
                 <configuration>
-                    <generatePackage>cz.cas.lib.proarc.desa.nsesss2</generatePackage>
-                    <schemaLanguage>XMLSCHEMA</schemaLanguage>
-                    <schemaDirectory>src/main/resources/cz/cas/lib/proarc/desa/nsesss2</schemaDirectory>
-                    <args>
-                        
-                            Use custom package-info.java with preferred namespace prefixes.
-                            Requires JDK 1.6.0_24 or later or com.sun.xml.bind:jaxb-impl:2.2.2 dependency.
-                            -npa:  suppress generation of package level annotations (**/package-info.java)
-                        
-                        <arg>-npa</arg>
-                    </args>
-                    <extension>true</extension>
-                    <debug>true</debug>
+                    <packageName>cz.cas.lib.proarc.desa.soap</packageName>
+                    <wsdlDirectory>${basedir}/src/main/resources/cz/cas/lib/proarc/desa/wsdl</wsdlDirectory>
+                    <wsdlLocation>/cz/cas/lib/proarc/desa/wsdl/SIPSubmission.wsdl</wsdlLocation>
+                    <xnocompile>false</xnocompile>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>DESA</id>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>wsimport</goal>
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Djava.endorsed.dirs="${endorsed.dir}"</argLine>
+                    <systemPropertiesFile>${proarc-desa.junit.properties.file}</systemPropertiesFile>
+                </configuration>
+            </plugin>
 
         </plugins>
+
     </build>
 </project>
